--- a/_includes/features.html
+++ b/_includes/features.html
@@ -17,6 +17,9 @@
             <p>
                 {{ feature.description }}
             </p>
+            <p>
+                <a href="{{ feature.link }}">Visit</a>
+            </p>
         </div>
     </div>
     {% endif %}
