--- a/_includes/features.html
+++ b/_includes/features.html
@@ -18,7 +18,7 @@
                 {{ feature.description }}
             </p>
             <p>
-                <a href="{{ feature.link }}">Visit</a>
+                <a href="{{ feature.link }}">{{ feature.link_text }}</a>
             </p>
         </div>
     </div>
