--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,8 @@
 <footer>
+	<!--
 	{% if site.your_name %}
 	<p class="footerText">Owned by {% if site.your_link %}<a href="{{ site.your_link }}">{% endif %}{{ site.your_name }}{% if site.your_link %}</a>{% endif %}{% if site.your_city %} in {{ site.your_city }}{% endif %}</p>
-	{% endif %}
+	{% endif %}-->
 	<div class="footerIcons">
 
 		{% if site.facebook_username %}
