--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,25 +37,25 @@
                             </svg>
                             <img class="appIconLarge" src="{{ site.app_icon | relative_url }}">
                         </div>
-                        <div class="appNamePriceContainer">
+                        <!--<div class="appNamePriceContainer">
                             <h1 class="appName">
                                 {{ site.app_name }}
                             </h1>
                             <h2 class="appPrice">
                                 {{ site.app_price }}
                             </h2>
-                        </div>
+                        </div>-->
                         <div class="appDescriptionContainer">
                             <p class ="appDescription">
                                 {{ site.app_description }}
                             </p>
                         </div>
-                        <div class="downloadButtonsContainer">
+                        <!--<div class="downloadButtonsContainer">
                             {% if site.playstore_link %}
                                 <a class="playStoreLink" href="{{site.playstore_link}}"><img class="playStore" src="assets/playstore.png"></a>
                             {% endif %}
                             <a class="appStoreLink" href="{{site.appstore_link}}"><img class="appStore" src="assets/appstore.png"></a>
-                        </div>
+                        </div>-->
                     </div>
                     {% include features.html %}
                     {% include footer.html %}
