--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -57,7 +57,7 @@
                             <a class="appStoreLink" href="{{site.appstore_link}}"><img class="appStore" src="assets/appstore.png"></a>
                         </div>-->
                         <div class="downloadButtonsContainer">
-                            <a href="/join" class="joinnow">Join Now</a>
+                            <a href="/join" class="joinnow button-65">Join Now</a>
                         </div>
                     </div>
                     {% include features.html %}
