--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -58,6 +58,7 @@
                         </div>-->
                         <div class="downloadButtonsContainer">
                             <a href="/join" class="joinnow button-65">Join Now</a>
+                            <button class="button-65" role="button">Button 65</button>
                         </div>
                     </div>
                     {% include features.html %}
