--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -61,11 +61,11 @@
 
 	</div>
 	<div class="footerLinks">
-		<a href="../privacypolicy" target="_self">Privacy Policy</a>
+		<a href="../privacypolicy" target="_blank">Privacy Policy</a>
 	</div>
 	<!--<div class="footerLinks">
 		{% for page in site.pages %}
-			<a href="{{ page.url | relative_url }}" target="_self">{{ page.title }}</a>
+			<a href="{{ page.url | relative_url }}" target="_blank">{{ page.title }}</a>
 		{% endfor %}
 		{% if site.presskit_download_link %}
 			<a href="{{ site.presskit_download_link }}">Press Kit</a>
