--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -57,8 +57,7 @@
                             <a class="appStoreLink" href="{{site.appstore_link}}"><img class="appStore" src="assets/appstore.png"></a>
                         </div>-->
                         <div class="downloadButtonsContainer">
-                            <a href="/join" class="joinnow button-65">Join Now</a>
-                            <button class="button-65" role="button">Button 65</button>
+                            <button href="/join" target="_blank" class="button-65" role="button">Join Now</button>
                         </div>
                     </div>
                     {% include features.html %}
