--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -57,7 +57,7 @@
                             <a class="appStoreLink" href="{{site.appstore_link}}"><img class="appStore" src="assets/appstore.png"></a>
                         </div>-->
                         <div class="downloadButtonsContainer">
-                            <button href="/join" target="_blank" class="button-65" role="button">Join Now</button>
+                            <button href="/join" target="_self" class="button-65" role="button">Join Now</button>
                         </div>
                     </div>
                     {% include features.html %}
