--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,7 +9,7 @@
 				</defs>
 			</svg>
 			{% if page.url != '/' %}
-				<a href="../" target="_blank"><img class="headerIcon" src="{{ site.app_icon | relative_url }}"></a>
+				<a href="../" target="_self"><img class="headerIcon" src="{{ site.app_icon | relative_url }}"></a>
 			{% else %}
 				<img class="headerIcon" src="{{ site.app_icon | relative_url }}">
 			{% endif %}
@@ -21,7 +21,7 @@
 		<ul>
 			{% for page in site.pages %}
 				{% if page.include_in_header == true %}
-				<li><a href="{{ page.url | relative_url }}" target="_blank">{{ page.title }}</a></li>
+				<li><a href="{{ page.url | relative_url }}" target="_self">{{ page.title }}</a></li>
 				{% endif %}
 			{% endfor %}
 			{% if site.presskit_download_link %}
