--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -9,7 +9,7 @@
   border-style: none;
   box-shadow: none;
   box-sizing: border-box;
-  color: #fff;
+  color: #fff!important;
   cursor: pointer;
   display: inline-block;
   font-family: Inter,-apple-system,system-ui,"Segoe UI",Helvetica,Arial,sans-serif;
