--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -33,6 +33,8 @@
   white-space: nowrap;
 }
 
+button.button-65 {width:auto}
+
 .button-65:hover {
   background-color: #1366d6;
   box-shadow: rgba(0, 0, 0, .05) 0 5px 30px, rgba(0, 0, 0, .05) 0 1px 4px;
