--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -33,7 +33,7 @@
   white-space: nowrap;
 }
 
-button.button-65 {width:auto}
+button-66 {width:auto!important}
 
 .button-65:hover {
   background-color: #1366d6;
